# aigc-pp-workflow

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
apps/local-web/: README.md
apps/public-entry/: .env.example  package-lock.json  package.json
apps/public-entry/src/app/: globals.css  layout.tsx  page.tsx
apps/public-entry/src/app/api/artifact/[jobId]/[...path]/: route.ts
apps/public-entry/src/app/api/jobs/: route.ts
apps/public-entry/src/app/api/jobs/[jobId]/: route.ts
apps/public-entry/src/app/components/: WorkflowConsole.tsx
apps/public-entry/src/lib/: workerProxy.ts
docs/: methodology.md
expert-packs/film/v1/: expert-pack.yaml  system.md
expert-packs/novel/v1/: expert-pack.yaml  system.md
skills/worldbuilding-novel-expert/: SKILL.md
skills/worldbuilding-novel-expert/agents/: openai.yaml
skills/worldbuilding-novel-expert/references/: methodology.md
tests/: test_expert_packs.py  test_open_source_hygiene.py  test_providers.py  test_skill_package.py  test_web.py  test_workflow.py
